yea more shit to the pile

--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -8,7 +8,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		
+		<canvas id="canvasIMGGEN" style='' hidden></canvas>
+  	<canvas id='cam2' class="gameCam" width="1600" height="900"></canvas>
 		<script src="./v_app.js"></script>
 	</body>
 </html>
