--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -10,6 +10,6 @@
 	<body>
 		<canvas id="canvasIMGGEN" style='' hidden></canvas>
   	<canvas id='cam2' class="gameCam" width="1600" height="900"></canvas>
-		<script src="./v_app.js"></script>
+		<script src="./v_app.v_pack.js"></script>
 	</body>
 </html>
