yea many good stuff incoming

--- a/Var_@_v-0.1_72/PUBLIC/index.html
+++ b/Var_@_v-0.1_72/PUBLIC/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Socket.IO Chat Example</title>
-  <link rel="stylesheet" href="/base.ORIGIN.css">
+  <link rel="stylesheet" href="/root_styles.css">
 </head>
 <body>
   <ul class="pages">
@@ -21,8 +21,7 @@
     </li>
   </ul>
 
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/base.ORIGIN.js"></script>
+  <script src="/Vapp.js"></script>
 </body>
 </html>
