--- a/Var_@_v-0.1_72/app_src/index.html
+++ b/Var_@_v-0.1_72/app_src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Socket.IO Chat Example</title>
-  <link rel="stylesheet" href="/base.ORIGIN.css">
+  <link rel="stylesheet" href="/root_styles.css">
 </head>
 <body>
   <ul class="pages">
@@ -22,6 +22,6 @@
   </ul>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/base.ORIGIN_Vrw.js"></script>
+  <script src="/Vapp.js"></script>
 </body>
 </html>
