yea things are back baby

--- a/app_src/index.html
+++ b/app_src/index.html
@@ -22,6 +22,6 @@
   </ul>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/Vapp.v_pack.js"></script>
+  <script src="/Vapp.js"></script>
 </body>
 </html>
