yea works with v_database things and can login user with username and password from it

--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -15,8 +15,11 @@
     </li>
     <li class="login page">
       <div class="form">
-        <h3 class="title">What's your nickname?</h3>
+        <h2>LOGIN FORM</h2>
+        <h3 class="title">Username?</h3>
         <input class="usernameInput" type="text" maxlength="14" />
+        <h3 class="title">Password?</h3>
+        <input class="passwordInput" type="text" maxlength="14" />
       </div>
     </li>
   </ul>
