--- a/SRC.app/index.html
+++ b/SRC.app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Socket.IO Chat Example</title>
-  <link rel="stylesheet" href="/root_styles.css">
+  <link rel="stylesheet" href="/styles/root_styles.css">
 </head>
 <body>
   <ul class="pages">
@@ -22,6 +22,6 @@
   </ul>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/Vapp.v_pack.js"></script>
+  <script src="/scripts/Vapp.v_pack.js"></script>
 </body>
 </html>
